--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
     -->
 	  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <!-- Dashboard Sidebar Metis Menu Stylesheet 	   -->
+	<!-- <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/alpertuna/react-metismenu/master/dist/react-metismenu-standart.min.css" />
+	  <script src="https://cdn.jsdelivr.net/npm/jquery"></script>
+	  <script src="https://cdn.jsdelivr.net/npm/metismenu"></script> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -20,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+	  <script src="https://kit.fontawesome.com/af1489d4b2.js" crossorigin="anonymous"></script>
     <title>React App</title>
   </head>
   <body>
